--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "serverless-http": "^2.7.0"
   },
   "devDependencies": {
